# zewif-zingo

./: Cargo.toml  UPDATE_PROGRESS.md
src/: binary.rs  error.rs  lib.rs  wallet_capability.rs  zingo_parser.rs
