[package]
name = "zewif-zingo"
version = "0.1.0"
edition = "2024"
license = "MIT or Apache 2.0"

[dependencies]
zewif = { path = "../zewif" }

anyhow = "1.0.95"
hex = "0.4.3"
zcash_primitives = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2" }
zcash_client_backend = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2", features = [
    "lightwalletd-tonic",
    "orchard",
    "transparent-inputs",
] }
zcash_keys = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2", features = [
    "transparent-inputs",
    "sapling",
    "orchard",
] }
zcash_encoding = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2" }
prost = { version = "0.13.5", features = ["prost-derive"] }
orchard = "0.11.0"
zcash_protocol = "0.5.0"
zingolib = { git = "https://github.com/zingolabs/zingolib.git", rev = "965e81228d3a1d99b76c1e3c71202d8fdbbd41dc", features = [
    "test-elevation",
] }
append-only-vec = { git = "https://github.com/zancas/append-only-vec.git", branch = "add_debug_impl" }
byteorder = "1.5.0"
bip0039 = "=0.11.0"

[features]
default = []
with-context = []
